<resources>
    <string name="app_name">NCMBAndroid</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email/User name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_signup">Sign up</string>
    <string name="action_auto_login">Use auto login</string>
    <string name="action_social_login">Social Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">D</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab </string>
    <string name="tab_text_4">Tab 2</string>
    <string name="tab_text_5">Tab 1</string>
    <string name="tab_text_6">Tab 2</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="facebook_app_id">570184643666083</string> <string name="fb_login_protocol_scheme">fb570184643666083</string>

</resources>