...
            app:layout_constraintRight_toRightOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:text="ANDROID SDK TEST" />
            </FrameLayout>

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
